Create Recipe page structure

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes</title>
+    <title>Lasagna Recipe</title>
   </head>
   <body>
-    <h1>Odin Recepies</h1>
-    <a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener"
-      >Lasagna</a
-    >
+    <a href="../index.html">Home</a>
+    <h1>Lasagna Recipe</h1>
   </body>
 </html>
