--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <h1>Odin Recepies</h1>
-    <a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener"
-      >Lasagna</a
-    >
+    <a href="./recipes/lasagna.html">Lasagna</a>
   </body>
 </html>
