--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recepies</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+      <li><a href="./recipes/pistachio-cake.html">Pistachio Cake</a></li>
+    </ul>
   </body>
 </html>
